// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dobule-quotes.html - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<img src="test.png" alt="John 'ShotGun' Nelson">

=====================================output=====================================
<img src='test.png' alt="John 'ShotGun' Nelson" />

================================================================================
`;

exports[`dobule-quotes.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<img src="test.png" alt="John 'ShotGun' Nelson">

=====================================output=====================================
<img src="test.png" alt="John 'ShotGun' Nelson" />

================================================================================
`;

exports[`single-quotes.html - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<img src="test.png" alt='John "ShotGun" Nelson'>

=====================================output=====================================
<img src='test.png' alt='John "ShotGun" Nelson' />

================================================================================
`;

exports[`single-quotes.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<img src="test.png" alt='John "ShotGun" Nelson'>

=====================================output=====================================
<img src="test.png" alt='John "ShotGun" Nelson' />

================================================================================
`;

exports[`smart-quotes.html - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div 
    smart-quotes='123 " 456'
    smart-quotes="123 ' 456"
    smart-quotes='123 &apos;&quot; 456'
></div>

=====================================output=====================================
<div
  smart-quotes='123 " 456'
  smart-quotes="123 ' 456"
  smart-quotes='123 &apos;" 456'
></div>

================================================================================
`;

exports[`smart-quotes.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div 
    smart-quotes='123 " 456'
    smart-quotes="123 ' 456"
    smart-quotes='123 &apos;&quot; 456'
></div>

=====================================output=====================================
<div
  smart-quotes='123 " 456'
  smart-quotes="123 ' 456"
  smart-quotes="123 '&quot; 456"
></div>

================================================================================
`;

exports[`without-quotes.html - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<p title=Title>String</p>

=====================================output=====================================
<p title='Title'>String</p>

================================================================================
`;

exports[`without-quotes.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p title=Title>String</p>

=====================================output=====================================
<p title="Title">String</p>

================================================================================
`;
